# f1tenth-ros2-newcastleuniversity

./: README.md
documentation/0_build/: 0_Building_the_f1tenth_car.md  1_Lower_level_chassis.md  2_Autonoy_elements_and_upper_level_chassis.md
documentation/1_migrate_jetson_sdk/: Migrating_from_Jetson_SDK_4.x_to_5.1.x.md
documentation/2_configure/: 0_intro.md  1_Configuring_Jetson_and_Peripherals.md  2_Install_f1tenth_Driver_Stack.md
documentation/3_faq/: 0_Resolving_Steering_Control_Issues.md  1_Build_Issues.md  2_Odometry_Calibration.md
follow_the_gap/: CMakeLists.txt  package.xml
follow_the_gap/include/f110_reactive_methods/: utility.h
follow_the_gap/launch/: reactive_gap_follow_node.launch.py
follow_the_gap/src/: follow_the_gap.cpp
