<?xml version="1.0"?>
<package format="3">
  <name>follow_the_gap</name>
  <version>0.0.0</version>
  <description>Package for reactive methods in F110 project</description>
  <authors>
    <author email="m.s.inamdar2@newcastle.ac.uk">Mayuresh Inamdar</author>
    <author email="g.tsakoumakis2@newcastle.ac.uk">Georgios Tsakoumakis</author>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>geometry_msgs</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


